--- a/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
@@ -104,9 +104,9 @@
     }   
 </div>
 
-<button @onclick="@(e => Inicio(e))" class="texto-logo" style="background-color: transparent; border: 0;">
+<a href="/" class="texto-logo" style="background-color: transparent; border: 0;">
     pepeizq's deals
-</button>
+</a>
 
 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
     <ul class="navbar-nav flex-grow-1" style="align-items: center; margin-top: 0px;">
